<resources>
    <string name="app_name">Sinte_QR</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Listázó képernyő</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Új felvitele</string>
    <string name="previous">Previous</string>
    <string name="felmeres_listview_item_name">Felmérés neve</string>
    <string name="kopoalkatreszek_Adatai_name">Kopóalkatrészek adatai</string>

    <string name="QRFragment_label">QRFragment</string>

    <string name="LoginQRFragment">Login</string>

    <string name="JavitasokFragment">Javítások listája</string>

    <string name="SecondFragment_title">Kategóriák: </string>

    <string name="Checklist_label">Ellenörzőlista</string>

    <string name="Google_Firebase_Button_text">Firebase connect</string>

    <string name="Adatfelevetel_Button_text">Adatfelvételi lap</string>

    <string name="Adatfelevetel_label">Adatfelvételi lap</string>

    <string name="Adatfelveteli_lap">Adatfelvételi lap</string>

    <string name="Javitasok_lap">Javitasok lap</string>

    <string name="QRReader">Kód beolvasása</string>

    <!--Adatfelvételi laphoz Stringek-->
    <!--Adatfelvételi laphoz Stringek: Gépek-->
    <string name="gepszama">Gép száma: </string>
    <string name="gepNeve">Gép megnevezése: </string>
    <string name="gepLeltariSzama">Leltári száma: </string>
    <string name="gepElhelyezkedese">Elhelyezkedése: </string>
    <string name="gepFajtaja">Fajtája</string>
    <string name="gepMerete">Mérete: </string>
    <string name="gepMunkavegzesJellege">Gép munkavégzés jellege: </string>
    <string name="gepAlkatreszekAdatai">Alkatrészek adatai: </string>
    <string name="gepMeghajtas">Meghajtas</string>
    <string name="gepHevederMerete">Hevereder mérete: </string>
    <string name="gepDobokMerete">Dobok mérete</string>
    <!--Ide kell majd tengelyhossz és egyébb-->
    <string name="gepOldalfutasErzekelo">Oldalfutás érzékelő: </string>
    <string name="gepHomero">Hőmérő: </string>

    <!--Adatfelvételi laphoz Stringek: Javitasok-->
    <string name="gepJavitasok_Label">Javítások</string>
    <string name="javitasokDatum">Dátum: </string>
    <string name="javitasokMegnevezes">Megnevezés: </string>
    <string name="javitasokNullaUzemora_szama">Nulla üzemóra száma: </string>
    <string name="javitasokEszrevetel">Észrevétel: </string>

    <!--Adatfelvételi laphoz Stringek: Egyedi alkatrészek-->
    <string name="egyedi_alkatreszek_label">Egyedi alkatrészek</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>