<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="hu.sintegroup.sinte_qr.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_QRGeneratorFragment"
            app:destination="@+id/QRGeneratorFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_QRReaderFragment"
            app:destination="@+id/QRReaderFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_QRDriveFragment"
            app:destination="@+id/QRDriveFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="hu.sintegroup.sinte_qr.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_QRGeneratorFragment"
            app:destination="@+id/QRGeneratorFragment" />


    </fragment>
    <fragment
        android:id="@+id/QRGeneratorFragment"
        android:name="hu.sintegroup.sinte_qr.QRGenerateFragment"
        android:label="@string/QRFragment_label"
        tools:layout="@layout/fragment_q_r"/>

        <!--<action
            android:id="@+id/action_QRFragment_to_SecondFragment"
            app:destination="@+id/SecondFragment" />-->

    <fragment
        android:id="@+id/QRReaderFragment"
        android:name="hu.sintegroup.sinte_qr.QRReadFragment"
        android:label="@string/QRFragment_label"
        tools:layout="@layout/fragment_q_r_read"/>

    <fragment
        android:id="@+id/QRDriveFragment"
        android:name="hu.sintegroup.sinte_qr.GoogleDriveFragment"
        android:label="@string/QRFragment_label"
        tools:layout="@layout/fragment_google_drive"/>

</navigation>